<resources>

    <string name="app_name">GPS Live</string>

    <!-- Common -->
    <string name="desc">desc</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="unit_meter">m</string>
    <string name="unit_second">s</string>
    <string name="unit_millisecond">ms</string>
    <string name="unit_meters_per_second">m/s</string>
    <string name="unit_degree">&#176;</string>

    <string name="format_value_and_unit">%1$s %2$s</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_location_settings">Location Settings</string>

    <!-- Navigation Item -->
    <string name="nav_item_overview">Overview</string>
    <string name="nav_item_satellite">Satellite</string>

    <!-- Notification -->
    <string name="not_support_location_service">Not support location service.</string>

    <!-- Overview Page -->
    <string name="title_provider">Provider</string>
    <string name="title_location">Location</string>
    <string name="title_gps_status">GPS Status</string>
    <string name="title_nmea">NMEA</string>

    <string name="gps">GPS</string>
    <string name="network">Network</string>
    <string name="passive">Passive</string>
    <string name="provider">Provider</string>
    <string name="accuracy">Accuracy</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="bearing">Bearing</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="time">Time</string>
    <string name="max_satellites">Max Satellites</string>
    <string name="satellites">Satellites</string>
    <string name="first_fix_time">First Fix Time</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="nmea">NMEA</string>

    <!-- Satellite Page -->
    <string name="title_number">No.%1$d</string>

    <string name="azimuth">Azimuth</string>
    <string name="elevation">Elevation</string>
    <string name="prn">PRN</string> <!-- pseudo-random number -->
    <string name="snr">SNR</string> <!-- signal to noise ratio -->
    <string name="almanac">Almanac</string>
    <string name="ephemeris">Ephemeris</string>
    <string name="used_in_fix">Used In Fix</string>

    <string name="satellite_empty_hint">They run away from home :(</string>

</resources>
