<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/InfoCard">

    <GridLayout
        style="@style/InfoCardContent">

        <TextView
            style="@style/Category"
            android:text="@string/category_satellite" />

        <TextView
            style="@style/Item"
            android:text="@string/max_satellites" />

        <TextView
            style="@style/Value"
            android:id="@+id/max_satellites" />

        <View style="@style/Divider"/>

        <TextView
            style="@style/Item"
            android:text="@string/satellites" />

        <TextView
            style="@style/Value"
            android:id="@+id/satellites" />

        <View style="@style/Divider"/>

        <TextView
            style="@style/Item"
            android:text="@string/first_fix_time" />

        <TextView
            style="@style/Value"
            android:id="@+id/first_fix_time" />
    </GridLayout>
</android.support.v7.widget.CardView>
